# tarang

./: .hgignore  README.txt  TODO.txt  change_log
docs/: Gemfile  (+4 more)
trunk/: CMakeLists.txt  Doxyfile
trunk/info/: ChangeLog  ChangeLog.md  TODO.txt
trunk/info/data/MRBC/in/: para.yaml
trunk/info/data/kepler/: para_2d.yaml  para_3d_netflux.yaml  para_lineartest.yaml  para_no_net_flux.yaml  para_umuran.yaml
trunk/info/data2.0/RBC_ChFF/: out
trunk/info/data2.0/kepler/: para_lineartest.yaml
trunk/info/tools/python-scripts/: Pope.py  compute_nlin.py  corrsin.py
trunk/info/tools/python-scripts/chebyshev/: ch_test.py  cheby.py  cheby_deriv.py  helmhotlz.py  helmhotlz_op.py
trunk/lib/: CMakeLists.txt
trunk/lib/basis/: CMakeLists.txt  basis.h  universal_fn_names.h
trunk/lib/basis/CFFF/: CMakeLists.txt
trunk/lib/basis/CFFF/slab/: CFFF_slab.cc  CFFF_slab.h  CFFF_slab_ET.cc  CFFF_slab_basic.cc  CFFF_slab_energy.cc  CFFF_slab_inline.h  CFFF_slab_tr.cc  CMakeLists.txt
trunk/lib/basis/ChFF/: CMakeLists.txt
trunk/lib/basis/ChFF/slab/: CMakeLists.txt  ChFF_slab.cc  ChFF_slab.h  ChFF_slab_basic.cc  ChFF_slab_energy.cc  ChFF_slab_inline.h  ChFF_slab_tr.cc  ChFF_slab_tr.cc.orig
trunk/lib/basis/ChSF/slab/: CMakeLists.txt  ChSF_slab.cc  ChSF_slab.h  ChSF_slab_basic.cc  ChSF_slab_energy.cc  ChSF_slab_inline.h  ChSF_slab_tr.cc
trunk/lib/basis/ChSS/slab/: CMakeLists.txt  ChSS_slab.cc  ChSS_slab_basic.cc  ChSS_slab_energy.cc  ChSS_slab_inline.h  ChSS_slab_tr.cc
trunk/lib/basis/FFF/: CMakeLists.txt
trunk/lib/basis/FFF/pencil/: CMakeLists.txt  FFF_pencil.cc  FFF_pencil.h  FFF_pencil_basic.cc  FFF_pencil_energy.cc  FFF_pencil_inline.h  FFF_pencil_tr.cc  FFF_tr.cc
trunk/lib/basis/FFF/slab/: CMakeLists.txt  FFF_slab.cc  FFF_slab.h  FFF_slab_basic.cc  FFF_slab_energy.cc  FFF_slab_inline.h  FFF_slab_tr.cc
trunk/lib/basis/FFFW/slab/: CMakeLists.txt  FFFW_slab.cc  FFFW_slab.h  FFFW_slab_ET.cc  FFFW_slab_basic.cc  FFFW_slab_energy.cc  FFFW_slab_inline.h  FFFW_slab_tr.cc
trunk/lib/basis/SFF/pencil/: CMakeLists.txt  SFF_pencil.cc  SFF_pencil.h  SFF_pencil_basic.cc  SFF_pencil_energy.cc  SFF_pencil_inline.h  SFF_pencil_inline_trial.h  SFF_pencil_tr.cc
trunk/lib/basis/SFF/slab/: CMakeLists.txt  SFF_slab.cc  SFF_slab.h  SFF_slab_basic.cc  SFF_slab_energy.cc  SFF_slab_inline.h  SFF_slab_tr.cc
trunk/lib/basis/SSF/: CMakeLists.txt
trunk/lib/basis/SSF/pencil/: CMakeLists.txt  SSF_pencil.cc  SSF_pencil.h  SSF_pencil_basic.cc  SSF_pencil_energy.cc  SSF_pencil_inline.h  SSF_pencil_tr.cc
trunk/lib/basis/SSF/slab/: CMakeLists.txt  SSF_slab.cc  SSF_slab.h  SSF_slab_basic.cc  SSF_slab_energy.cc  SSF_slab_inline.h  SSF_slab_tr.cc
trunk/lib/basis/SSS/: CMakeLists.txt
trunk/lib/basis/SSS/pencil/: CMakeLists.txt  SSS_pencil.cc  SSS_pencil.h  SSS_pencil_ET.cc  SSS_pencil_basic.cc  SSS_pencil_energy.cc  SSS_pencil_inline.h  SSS_pencil_tr.cc
trunk/lib/basis/basicfn/: ArrayOps.cc  ArrayOps.h  BasicIO.cc  BasicIO.h  BasicIO_SP.cc  BasicIO_SP.h  BasicIO_tarang1.cc  CMakeLists.txt  basic_extern_vars.h  basicfn_inline.h  shell_etc_indices.cc  shell_etc_indices.h  universal.h  universal_ET.cc  universal_basic.cc  universal_energy.cc
trunk/lib/basis/spectral_transform/: CMakeLists.txt  spectral_def_vars.h  spectral_transform.cc  spectral_transform.h
trunk/lib/fields/: CMakeLists.txt  Csf.cc  Csf.h  Cvf.cc  Cvf.h  Rsf.cc  Rsf.h  Rvf.cc  Rvf.h  fields.h  plainCsf.cc  plainCsf.h  plainCvf.cc  plainCvf.h
trunk/lib/fields/struct-fn/: Rsf.cc  Rsf.h  Rvf.cc  Rvf.h  planar_struct_fn.cc  planar_struct_fn.h  struct_fn.cc  struct_fn.h  struct_inline.h
trunk/lib/fluid/: CMakeLists.txt  fluid.h
trunk/lib/fluid/Incompressible/: CMakeLists.txt
trunk/lib/fluid/fluid_base/: CMakeLists.txt  Correlation.cc  Correlation.h  FluidSF.cc  FluidSF.h  FluidVF.cc  FluidVF.h  MHD.cc  MHD.h  PlainFluidVF.cc  PlainFluidVF.h  fluid_base.h
trunk/lib/fluid/incompressible/: CMakeLists.txt  Pressure.cc  Pressure.h  extern_var_incompress.h
trunk/lib/global/: CMakeLists.txt  Global.cc  Global.h  Global_extern_vars.cc  Global_extern_vars.h  Global_init_default.cc  Global_init_defaults.cc  Global_print.cc  Global_process_advanced_vars.cc  Global_process_basic_vars.cc  Global_read.cc  def_vars.h
trunk/lib/gpu/: basis_gpu.cc  basis_gpu.h  compute_force_gpu.cc  compute_nlin_gpu.cc  gpu.h  tadvance_functions_gpu.cc  time_adv_fluid_gpu.cc
trunk/processors/postprocess/: Global_vars.py  constants.py  field_k.py  field_r.py  helperfunc.py  tarang.py
trunk/processors/postprocess/data/: Fluid_3d.py  MHD_3d.py  RBC_2d.py  RBC_3d.py
trunk/processors/python-scripts/: RAM_calculator.py  Ra_critical.py  triad.py  triad_SF.py  triad_chakresh.py
trunk/processors/python-scripts/chebyshev/: ch_test.py  cheby_test.py
trunk/processors/tools/line_count/: line_count.sh
trunk/src/: CMakeLists.txt
trunk/src/fft/: CMakeLists.txt  main.cc  main.h  mem_usage.cc  test_pencil.cc  test_slab.cc  test_transform.cc
trunk/src/pre-process/: CMakeLists.txt  tarang_field_version_convert.cc
trunk/src/solvers/: CMakeLists.txt  main.cc  main.h  mem_usage.cc
trunk/src/solvers/GP/: GP_main.cc
trunk/src/solvers/IFluid/: Ifluid_main.cc  Ifluid_main.h  time_iterate_fluid_gpu.cc
trunk/src/solvers/IMHD/: IMHD_main.cc
trunk/src/solvers/IMHDastro/: IMHDastro_main.cc
trunk/src/solvers/IMHDscalar/: IMHDscalar_main.cc
trunk/src/solvers/Iscalar/: Iscalar_main.cc
trunk/src/solvers/ifluid/: Ifluid_main.cc  time_iterate_fluid_gpu.cc
trunk/src/solvers/imhd/: IMHD_main.cc
trunk/src/solvers/imhdastro/: IMHDastro_main.cc
trunk/src/solvers/imhdscalar/: IMHDscalar_main.cc
trunk/src/solvers/iscalar/: Iscalar_main.cc
trunk/src/solvers/mrbc/: MRBC_main.cc
trunk/src/test/: CMakeLists.txt  test_BasicIO.cc
trunk/src/test/spectral_transform/: CMakeLists.txt  main.cc
trunk/src/tools/: CMakeLists.txt  tarang_ascii_to_hdf5.cc  tarang_field_convert_double_float.cc  tarang_field_version_convert.cc  tarang_field_version_convert1.cc  tarang_field_version_convert2.2.cc  tarang_field_version_convert2.3.cc  tarang_field_version_convert_fortran.cc
(+301 files in other folders)
